src/test/deca/context/invalid/objet/void-return.deca
// Description:
//    Condition de la règle 3.24 non respectée 
//
// Resultats:
//    Ligne 10: On ne peut pas avoir un return si la fonction ne renvoie rien.
//

class A{
    void getX() {
        return (void)(0); // TODO: Est-ce que c'est bien ça pour le return void ?
    }
}

{
    
}
